may-2026-k8s-httproute/httproute-filters.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: telemetry-filter-route
  namespace: default
  labels:
    deploymentScope: "headerModification"
spec:
  parentRefs:
  - name: api-gateway
  rules:
  - filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        set:
        - name: x-custom-header
          value: customValue
    backendRefs:
    - name: telemetry-backend-service
      port: 8080
